Tried to modify the src of image to see if it is being displayed properly or not

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <div class="card">
     <img alt="Profile picture of a person with curly hair" height="100"
-      src="images\avatar-jessica.jpeg"
+      src="..\images\avatar-jessica.jpeg"
       width="100" />
     <h2 >Jessica Randall</h2>
     <h3 id = "location">London, United Kingdom</h3>
